🐛 [transition clock] : when seconde was at 0 , value of degrees go behind so it jump back correct it unset transition for 0.5s at this time

--- a/style.css
+++ b/style.css
@@ -18,6 +18,12 @@ body {
     transform: translate(-50%, -50%);
 }
 
+@media (max-width: 400px ) {
+    .container{
+        transform: translate(-50%, -50%) scale(0.75);
+    }
+}
+
 .border-circle{
     position: absolute;
     top: 50%;
